# furby

./: .gitignore  Cargo.toml  default.nix  flake.nix  readme.txt  result  rustfmt.toml  shell.nix
.direnv/: flake-profile  flake-profile.rc
backend/: Cargo.toml
backend/migrations/2020-09-22-104623_create_users/: up.sql
backend/migrations/2020-12-25-041256_cart_quantity/: down.sql  up.sql
backend/migrations/2020-12-25-150728_transaction_date/: down.sql  up.sql
backend/migrations/2020-12-26-051845_ar_integration/: down.sql  up.sql
backend/src/: lib.rs  models.rs  schema.rs
backend/src/handlers/: cart_items.rs  mod.rs  product.rs  rating.rs  transaction.rs  users.rs
backend/tests/: requests.txt
backend/tests/product/: bed.json  chair.json  desktop_table.json  dining_set.json  lamp.json  office_chair.json  recliner.json  single_chair.json
backend/tests/users/: add_user.json
frontend/: elm.json  index.html  main.html  main.js
frontend/.direnv/: flake-profile  flake-profile.rc
frontend/src/: Cart.elm  Catalog.elm  Checkout.elm  Icons.elm  Login.elm  Main.elm  Product.elm  Profile.elm  Signup.elm  Styles.elm  Utils.elm
migrations/2020-11-16-133516_create_products_table/: down.sql  up.sql
migrations/2020-12-13-140215_all_tables/: down.sql  up.sql
nix/: sources.json
src/: models.rs  schema.rs
src/handlers/: cart_items.rs  mod.rs  product.rs  rating.rs  smoke.rs  users.rs  users.rs.html
tests/: requests.txt
tests/json_data/: add_user.json  chair.json  dumb_sofa.json  smart_sofa.json
tests/users/: add_akshay.json
(+12 files in other folders)
