[package]
name = "furby"
version = "0.1.0"
authors = ["Akshay <nerdy@peppe.rs>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
bcrypt = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
actix-identity = "0.3.1"
actix-cors = "0.5"
bigdecimal = "0.0.14"
rand = "0.7"

[dependencies.diesel]
version = "1.4.2"
features = ["mysql", "r2d2", "numeric", "chrono"]
default-features = false

[dependencies.chrono]
version = "0.4"
features = ["serde"]
